[package]
name = "thex"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]

[dependencies]
lazy_static = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = { version = "0.3", default-features = false, features = ["json"] }
diesel = { version = "1.0", features = ["sqlite"] }
r2d2-diesel = "1.0"
r2d2 = "0.8"