[package]
name = "pixiu"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]

[dependencies]
lazy_static = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = { version = "0.3", default-features = false, features = ["json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.5"
rusqlite = "0.13"
reqwest = "0.8"
rand = "0.4"
base62 = "0.3"
